# escapism

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  escapism.py  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
tests/: test_escapism.py
