# PEP 621 build info
[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Project metadata
# ref: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "escapism"
version = "1.1.0.dev"
dynamic = ["readme"]
description = "Simple, generic API for escaping strings."
authors = [
  { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
  { name = "Min RK", email = "benjaminrk@gmail.com" },
]
keywords = ["escape"]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/jupyterhub/escapism"
Funding = "https://jupyter.org/about"
Source = "https://github.com/jupyterhub/escapism"
Tracker = "https://github.com/jupyterhub/escapism/issues"

# dynamic sources of metadata in other files
[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

# setuptools_scm needs a section to be present
[tool.setuptools_scm]
# we don't actually use setuptools_scm for versions,
# only the file-finder
fallback_version = "0.0.0"

# ruff is our linter and formatter

[tool.ruff.lint]
select = [
  "E9", # syntax
  "I",  # isort
  "UP", # pyupgrade
  "F",  # flake8
]

# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/jupyterhub/escapism"

[tool.tbump.version]
current = "1.1.0.dev"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+)|)
  \.?
  (?P<dev>(?<=\.)dev\d*|)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "escapism.py"
search = '__version__ = "{current_version}"'
